public/javascripts/SVLabel/css/svl-canvas.css
#street-view-holder {
    border: 5px solid black;
    border-radius: 5px;
    background-color: black;
    position: absolute;
    left: 0px;
    top:0px;
    height: 490px;
    width: 730px;
}

.window-streetview {
    position: absolute;
    left: 0;
    top:0;
    height: 480px;
    width: 720px;
}

/* Shared button look pano-overlay-buttons.css; this rule only positions the holder in the top-right of the pano. */
#zoom-buttons-holder {
    position: absolute;
    z-index: 3;
    top: 5px;
    right: 5px;
}

/* Stuck/sound/feedback controls in the top-left. Shared pill look lives in pano-overlay-buttons.css;
   here we only position the holder and drive the expand/collapse of the optional buttons. */
#explore-control-buttons-holder {
    position: absolute;
    z-index: 3;
    top: 5px;
    left: 5px;
}

/* Collapsed by default: only the Stuck button and chevron toggle show. */
#explore-control-buttons-holder .collapsible-control-button {
    display: none;
}

#explore-control-buttons-holder.expanded .collapsible-control-button {
    display: flex;
}

#nav-arrows-container {
    position: absolute;
    top: 50%;
    left: calc(50% - 90px);
    width: 220px;
    height: 220px;
    perspective: 285px;
}

/* Used to make it look like there's a 3D perspective for the arrows. */
#nav-arrows-container svg {
     transform: rotateX(45deg);
     transform-style: preserve-3d;
}

#arrow-group image {
    cursor: pointer;
    filter: drop-shadow(0 0 0.05rem black) drop-shadow(0 0 0.05rem black); /* Adds black outline. */
}

#arrow-group image:hover {
    filter:
        drop-shadow(0 0 0.05rem black) drop-shadow(0 0 0.05rem black) /* Adds black outline. */
        sepia(1) saturate(2) hue-rotate(315deg); /* Adds yellow highlight on hover. */
}

/* Used to highlight/blink the nav arrows in the tutorial. */
#arrow-group image.highlight {
    filter:
        drop-shadow(0 0 0.05rem black) drop-shadow(0 0 0.05rem black) /* Adds black outline. */
        sepia(1) saturate(5) hue-rotate(315deg); /* Adds yellow highlight. */
}

#delete-icon-holder {
    cursor: pointer;
    visibility: hidden;
    /* Position */
    position: absolute;
    width: 20px;
    height: 20px;
    left: 0;
    top: 10px;
}

#label-delete-icon {
    height: 20px;
    width: 20px;
    position: absolute;
}

.speed-limit-sign {
    display: none;
    width: 60px;
    height: 70px;
    padding: 3px;
    margin-left: 2px;
    left: 0;
    bottom: 22px;
    border-radius: 5px;
    position: absolute;
    z-index: 1;
    pointer-events: none;
    transform: scale(0.75);
}

.speed-limit-sign[data-design-style="non-us-canada"] {
    width: 75px;
    height: 75px;
    padding: 0px;
    margin-top: -10px;
    margin-left: -10px;
    border-radius: 100%;
    transform: scale(0.6);
}

.speed-limit-holder {
    flex: 1;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 5px;
    border: 3px solid black;
}

.speed-limit-sign[data-design-style="non-us-canada"] .speed-limit-holder {
    border-radius: 100%;
    border: 7px solid #f7000096;
}

.speed-limit-text {
    font-size: 12px;
    font-weight: bold;
    text-align: center;
}

#speed-limit {
    font-size: 30px;
    display: block;
    margin-bottom: -7px;
}

